--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
  </div>
       
      <div class="imagem-mouse">
-        <img onclick="mudarCor('#00bf63');mudarImagem('./img/Mouse5.png')" src="img/Mouse5.png" alt="imagem-mouse" class="imagem-mouse5">
-        <img onclick="mudarCor('#22a3ba');mudarImagem('./img/Mouse.png')" src="img/Mouse.png" src="img/Mouse.png" alt="imagem-mouse" class="imagem-mouse1">
-        <img onclick="mudarCor('#5b42a8');mudarImagem('./img/Mouse3.png')" src="img/Mouse3.png" src="img/Mouse3.png" alt="imagem-mouse" class="imagem-mouse3">
+        <img onclick="mudarCor('#00bf63');mudarImagem('./img/Mouse5.png')" src="./Mouse5.png" alt="imagem-mouse" class="imagem-mouse5">
+        <img onclick="mudarCor('#22a3ba');mudarImagem('./img/Mouse.png')" src="./Mouse.png" src="img/Mouse.png" alt="imagem-mouse" class="imagem-mouse1">
+        <img onclick="mudarCor('#5b42a8');mudarImagem('./img/Mouse3.png')" src="./Mouse3.png" src="img/Mouse3.png" alt="imagem-mouse" class="imagem-mouse3">
             
     </div>
 
