--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>MOUSE</h1>
 
      <div>
-    <img class="mouse" src="img/Mouse.png" alt="imagem-mouse">
+    <img class="mouse" src="./Mouse.png" alt="imagem-mouse">
  </div>
       
      <div class="imagem-mouse">
